--- a/about.html
+++ b/about.html
@@ -48,16 +48,16 @@
         </a>
         <ul>
           <li>
-            <a href="/" title="Homepage"> Home</a>
+            <a href="./index.html" title="Homepage"> Home</a>
           </li>
           <li class="active">
-            <a href="/about.html" title="About Patricia"> About</a>
+            <a href="./about.html" title="About Patricia"> About</a>
           </li>
           <li>
-            <a href="/work.html" title="Patricia's work"> Work</a>
+            <a href="./work.html" title="Patricia's work"> Work</a>
           </li>
           <li>
-            <a href="/contact.html" title="Contact Patricia"> Contact</a>
+            <a href="./contact.html" title="Contact Patricia"> Contact</a>
           </li>
         </ul>
       </nav>
