--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/" title="Homepage">
+        <a href="./index.html" title="Homepage">
           <img
           src="images/Mia Aria Logo.png"
             class="logo d-none d-md-block"
@@ -75,7 +75,7 @@
               I'm always looking for new ways to push the limits of what's possible until I reach the top
 
             </p>
-            <a href="/work.html" class="btn btn-branding">See my projects</a>
+            <a href="./work.html" class="btn btn-branding">See my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
@@ -91,7 +91,7 @@
         </div>
         <div>
           <a
-            href="/contact.html"
+            href="./contact.html"
             class="btn btn-branding mt-3"
             title="Contact Mia"
           >
