--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/" title="Homepage">
+        <a href="./index.html" title="Homepage">
           <img
           src="images/Mia Aria Logo.png"
             class="logo d-none d-md-block"
@@ -72,7 +72,7 @@
         <div class="row">
           <div class="col-md-8">
             <form
-              action="https://formspree.io/f/mwkalajy"
+              action="https://formspree.io/f/xanynbnj"
               method="POST"
               class="border p-3 rounded mb-3"
             >
@@ -132,7 +132,7 @@
         </div>
         <div>
           <a
-            href="/contact.html"
+            href="./contact.html"
             class="btn btn-branding mt-3"
             title="Contact Patricia"
           >
