--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/" title="Homepage">
+        <a href="./index.html" title="Homepage">
           <img
             src="images/Mia Aria Logo.png"
             class="logo d-none d-md-block"
@@ -70,7 +70,7 @@
       <h1>Mia Aria</h1>
       <h2 class="mb-5">Professional Graphic Designer and branding specialist</h2>
       <div>
-        <a href="/contact.html" class="btn btn-branding" title="Contact me"
+        <a href="./contact.html" class="btn btn-branding" title="Contact me"
           >Contact me</a
         >
       </div>
@@ -94,7 +94,7 @@
             <p class="mb-5 text-muted">
               I entered the world of front-end development by gaining some knowledge in HTML, CSS, and JavaScript. I used my knowledge of these languages, along with my new skills in VS Code, to build a landing page about Yogurt. The page utilizes JavaScript functions to create user interaction. 
             </p>
-            <a href="/work.html" class="btn btn-branding-outline">
+            <a href="./work.html" class="btn btn-branding-outline">
               Learn more
             </a>
           </div>
@@ -107,7 +107,7 @@
             <p class="mb-5 text-muted">
               I built a Vanilla JavaScript weather app in SheCodes Plus, an advanced 8-week JavaScript coding workshop. Building upon my previously-gained knowledge, I also became skilled in Bootstrap, API’s, real-life development workflow, hosting, and advanced JavaScript. I combined all of these skills to create a fully-functioning weather app. 
             </p>
-            <a href="/work.html" class="btn btn-branding-outline">
+            <a href="./work.html" class="btn btn-branding-outline">
               Learn more
             </a>
           </div>
@@ -134,7 +134,7 @@
             <p class="mb-5 text-muted">
               I immersed myself in React development in SheCodes React. I used my knowledge of this highly-demanded framework to build a working dictionary app incorporating coding best practices, along with the most popular tools and technologies.
             </p>
-            <a href="/work.html" class="btn btn-branding-outline">
+            <a href="./work.html" class="btn btn-branding-outline">
               Learn more
             </a>
           </div>
@@ -148,7 +148,7 @@
           </div>
           <div>
             <a
-              href="/contact.html"
+              href="./contact.html"
               class="btn btn-branding mt-3"
               title="Contact Patricia"
             >
