--- a/about.html
+++ b/about.html
@@ -51,13 +51,13 @@
             <a href="./index.html" title="Homepage"> Home</a>
           </li>
           <li class="active">
-            <a href="./about.html" title="About Patricia"> About</a>
+            <a href="./about.html" title="About Mia"> About</a>
           </li>
           <li>
-            <a href="./work.html" title="Patricia's work"> Work</a>
+            <a href="./work.html" title="Mia's work"> Work</a>
           </li>
           <li>
-            <a href="./contact.html" title="Contact Patricia"> Contact</a>
+            <a href="./contact.html" title="Contact Mia"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/patricia.png" alt="" class="img-fluid" />
+          <img src="images/Mia.png" alt="" class="img-fluid" />
         </div>
       </div>
     </div>
