--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
             <a href="./index.html" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="./about.html" title="About Patricia"> About</a>
+            <a href="./about.html" title="About Mia"> About</a>
           </li>
           <li>
-            <a href="./work.html" title="Patricia's work"> Work</a>
+            <a href="./work.html" title="Mia's Mia"> Work</a>
           </li>
           <li>
-            <a href="./contact.html" title="Contact Patricia"> Contact</a>
+            <a href="./contact.html" title="Contact Mia"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -150,7 +150,7 @@
             <a
               href="./contact.html"
               class="btn btn-branding mt-3"
-              title="Contact Patricia"
+              title="Contact Mia"
             >
               Contact me
             </a>
