--- a/work.html
+++ b/work.html
@@ -51,13 +51,13 @@
             <a href="./index.html" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="./about.html" title="About Patricia"> About</a>
+            <a href="./about.html" title="About Mia"> About</a>
           </li>
           <li class="active">
-            <a href="./work.html" title="Patricia's work"> Work</a>
+            <a href="./work.html" title="Mia's work"> Work</a>
           </li>
           <li>
-            <a href="./contact.html" title="Contact Patricia"> Contact</a>
+            <a href="./contact.html" title="Contact Mia"> Contact</a>
           </li>
         </ul>
       </nav>
