--- a/work.html
+++ b/work.html
@@ -24,6 +24,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
    
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
     <link rel="stylesheet" href="styles/portfolio.css" />
 
     <script
@@ -112,6 +117,24 @@
               class="img-fluid mb-3 rounded"
               alt="Translation project preview"
             />
+            <h3 class="text-center m-0">Translation App</h3>
+            <p class="text-center text-muted">
+              Built using HTML, an active API, advanced CSS, and React
+            </p>
+            <div class="text-center mt-4 mb-5">
+            </div>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img src="images/ACADEMY-PACK.jpg" class="img-fluid mb-3 rounded" alt="Translation project preview">
+            <h3 class="text-center m-0">Translation App</h3>
+            <p class="text-center text-muted">
+              Built using HTML, an active API, advanced CSS, and React
+            </p>
+            <div class="text-center mt-4 mb-5">
+            </div>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img src="images/kamand-pack.jpg" class="img-fluid mb-3 rounded" alt="Translation project preview">
             <h3 class="text-center m-0">Translation App</h3>
             <p class="text-center text-muted">
               Built using HTML, an active API, advanced CSS, and React
