--- a/about.html
+++ b/about.html
@@ -24,6 +24,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
 
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
     <link rel="stylesheet" href="styles/portfolio.css" />
 
     <script
@@ -79,7 +84,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/Mia.png" alt="" class="img-fluid" />
+          <img src="images/PROF.jpg" alt="" class="img-fluid" />
         </div>
       </div>
     </div>
