--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
     
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
     <link rel="stylesheet" href="styles/portfolio.css" />
 
     <!-- JavaScript Bundle with Popper -->
@@ -120,7 +126,7 @@
           />
         </div>
       </div>
-      <div class="row">
+      <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img
             src="images/branding design 2.jpg"
@@ -133,6 +139,38 @@
             <h2 class="mb-5">Dictionary App</h2>
             <p class="mb-5 text-muted">
               I immersed myself in React development in SheCodes React. I used my knowledge of this highly-demanded framework to build a working dictionary app incorporating coding best practices, along with the most popular tools and technologies.
+            </p>
+            <a href="./work.html" class="btn btn-branding-outline">
+              Learn more
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5 text-muted">
+              I built a Vanilla JavaScript weather app in SheCodes Plus, an advanced 8-week JavaScript coding workshop. Building upon my previously-gained knowledge, I also became skilled in Bootstrap, API’s, real-life development workflow, hosting, and advanced JavaScript. I combined all of these skills to create a fully-functioning weather app. 
+            </p>
+            <a href="./work.html" class="btn btn-branding-outline">
+              Learn more
+            </a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/ACADEMY-PACK.jpg" class="img-fluid" alt="Weather project preview">
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/kamand-pack.jpg" class="img-fluid" alt="Yogurt project preview">
+        </div>
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">Yogurt Landing Page </h2>
+            <p class="mb-5 text-muted">
+              I entered the world of front-end development by gaining some knowledge in HTML, CSS, and JavaScript. I used my knowledge of these languages, along with my new skills in VS Code, to build a landing page about Yogurt. The page utilizes JavaScript functions to create user interaction. 
             </p>
             <a href="./work.html" class="btn btn-branding-outline">
               Learn more
