--- a/index.html
+++ b/index.html
@@ -91,14 +91,16 @@
           <img
             src="images/branding design 0.jpg"
             class="img-fluid"
-            alt="Yogurt project preview"
+            alt="NEONYO project preview"
           />
         </div>
         <div class="col">
           <div class="project-desciption">
-            <h2 class="mb-5">Yogurt Landing Page </h2>
+            <h2 class="mb-5">NEONYO </h2>
             <p class="mb-5 text-muted">
-              I entered the world of front-end development by gaining some knowledge in HTML, CSS, and JavaScript. I used my knowledge of these languages, along with my new skills in VS Code, to build a landing page about Yogurt. The page utilizes JavaScript functions to create user interaction. 
+              Golf Sports and Training Complex
+              <br />Order<br />
+              (Branding/Logo Design) In 2022
             </p>
             <a href="./work.html" class="btn btn-branding-outline">
               Learn more
@@ -109,9 +111,11 @@
       <div class="row mb-5">
         <div class="col">
           <div class="project-desciption">
-            <h2 class="mb-5">Weather App</h2>
+            <h2 class="mb-5">REBE HOMES</h2>
             <p class="mb-5 text-muted">
-              I built a Vanilla JavaScript weather app in SheCodes Plus, an advanced 8-week JavaScript coding workshop. Building upon my previously-gained knowledge, I also became skilled in Bootstrap, API’s, real-life development workflow, hosting, and advanced JavaScript. I combined all of these skills to create a fully-functioning weather app. 
+              Construction and Decoration Academy
+<br /> Order<br />
+(Branding/Logo design) In 2021
             </p>
             <a href="./work.html" class="btn btn-branding-outline">
               Learn more
@@ -122,7 +126,7 @@
           <img
             src="images/branding design 1.jpg"
             class="img-fluid"
-            alt="Weather project preview"
+            alt="REBE HOMES project preview"
           />
         </div>
       </div>
@@ -131,15 +135,17 @@
           <img
             src="images/branding design 2.jpg"
             class="img-fluid"
-            alt="Dictionary app preview"
+            alt="SANJUP preview"
           />
         </div>
         <div class="col">
           <div class="project-desciption">
-            <h2 class="mb-5">Dictionary App</h2>
+            <h2 class="mb-5">SANJUP</h2>
             <p class="mb-5 text-muted">
-              I immersed myself in React development in SheCodes React. I used my knowledge of this highly-demanded framework to build a working dictionary app incorporating coding best practices, along with the most popular tools and technologies.
-            </p>
+              Digital Arts Design and Development Company
+              <br />Order<br />
+              (Visual Identity Design/Palette and Typography/Logo Design in Minimal Style) In 2021
+                          </p>
             <a href="./work.html" class="btn btn-branding-outline">
               Learn more
             </a>
@@ -149,29 +155,31 @@
       <div class="row mb-5">
         <div class="col">
           <div class="project-desciption">
-            <h2 class="mb-5">Weather App</h2>
+            <h2 class="mb-5">NON FUNGIBLE HUMAN Academy</h2>
             <p class="mb-5 text-muted">
-              I built a Vanilla JavaScript weather app in SheCodes Plus, an advanced 8-week JavaScript coding workshop. Building upon my previously-gained knowledge, I also became skilled in Bootstrap, API’s, real-life development workflow, hosting, and advanced JavaScript. I combined all of these skills to create a fully-functioning weather app. 
-            </p>
+              Rehabilitation Academy
+              <br />Order<br />
+              (Visual Identity Design/Logo Design) In 2023            </p>
             <a href="./work.html" class="btn btn-branding-outline">
               Learn more
             </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/ACADEMY-PACK.jpg" class="img-fluid" alt="Weather project preview">
+          <img src="images/ACADEMY-PACK.jpg" class="img-fluid" alt="NON FUNGIBLE HUMAN Academy preview">
         </div>
       </div>
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/kamand-pack.jpg" class="img-fluid" alt="Yogurt project preview">
+          <img src="images/kamand-pack.jpg" class="img-fluid" alt="KAMAND preview">
         </div>
         <div class="col">
           <div class="project-desciption">
-            <h2 class="mb-5">Yogurt Landing Page </h2>
+            <h2 class="mb-5">KAMAND </h2>
             <p class="mb-5 text-muted">
-              I entered the world of front-end development by gaining some knowledge in HTML, CSS, and JavaScript. I used my knowledge of these languages, along with my new skills in VS Code, to build a landing page about Yogurt. The page utilizes JavaScript functions to create user interaction. 
-            </p>
+              Fashion and Beauty "brand in Iran"
+              <br />Order<br /> 
+              (Branding/Logo Design/Color Palette based on ancient Persian Colors) In 2024            </p>
             <a href="./work.html" class="btn btn-branding-outline">
               Learn more
             </a>
