--- a/work.html
+++ b/work.html
@@ -76,11 +76,11 @@
             <img
               src="images/branding design 0.jpg"
               class="img-fluid mb-3 rounded"
-              alt="Yogurt project preview"
+              alt="NEONYO preview"
             />
-            <h3 class="text-center m-0">Yogurt Landing Page</h3>
+            <h3 class="text-center m-0">NEONYO</h3>
             <p class="text-center text-muted">
-              Built with HTML, CSS, and JavaScript
+              (Branding/Logo Design) In 2022
             </p>
             <div class="text-center mt-4 mb-5">
             </div>
@@ -89,11 +89,11 @@
             <img
               src="images/branding design 1.jpg"
               class="img-fluid mb-3 rounded"
-              alt="Weather project preview"
+              alt="REBE HOMES preview"
             />
-            <h3 class="text-center m-0">Weather App</h3>
+            <h3 class="text-center m-0">REBE HOMES</h3>
             <p class="text-center text-muted">
-              Built using HTML, an active API, and advanced CSS and JavaScript
+              (Branding/Logo design) In 2021
             </p>
             <div class="text-center mt-4 mb-5">
             </div>
@@ -102,42 +102,33 @@
             <img
               src="images/branding design 2.jpg"
               class="img-fluid mb-3 rounded"
-              alt="project preview"
+              alt="SANJUP preview"
             />
-            <h3 class="text-center m-0">Dictionary App</h3>
+            <h3 class="text-center m-0">SANJUP</h3>
             <p class="text-center text-muted">
-              Built using HTML, an active API, advanced CSS, and React
+              (Visual Identity Design/Palette and Typography/Logo Design in Minimal Style) In 2021
             </p>
             <div class="text-center mt-4 mb-5">
             </div>
           </div>
           <div class="col-md-6 mb-4">
             <img
-              src="images/branding design 0.jpg"
+              src="images/ACADEMY-PACK.jpg"
               class="img-fluid mb-3 rounded"
-              alt="Translation project preview"
+              alt="NON FUNGIBLE HUMAN Academy preview"
             />
-            <h3 class="text-center m-0">Translation App</h3>
+            <h3 class="text-center m-0">NON FUNGIBLE HUMAN Academy</h3>
             <p class="text-center text-muted">
-              Built using HTML, an active API, advanced CSS, and React
+              (Visual Identity Design/Logo Design) In 2023
             </p>
             <div class="text-center mt-4 mb-5">
             </div>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="images/ACADEMY-PACK.jpg" class="img-fluid mb-3 rounded" alt="Translation project preview">
-            <h3 class="text-center m-0">Translation App</h3>
+            <img src="images/kamand-pack.jpg" class="img-fluid mb-3 rounded" alt="KAMAND preview">
+            <h3 class="text-center m-0">KAMAND</h3>
             <p class="text-center text-muted">
-              Built using HTML, an active API, advanced CSS, and React
-            </p>
-            <div class="text-center mt-4 mb-5">
-            </div>
-          </div>
-          <div class="col-md-6 mb-4">
-            <img src="images/kamand-pack.jpg" class="img-fluid mb-3 rounded" alt="Translation project preview">
-            <h3 class="text-center m-0">Translation App</h3>
-            <p class="text-center text-muted">
-              Built using HTML, an active API, advanced CSS, and React
+              (Branding/Logo Design/Color Palette based on ancient Persian Colors) In 2024
             </p>
             <div class="text-center mt-4 mb-5">
             </div>
